Update index.html correji el nombre de la imagen

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     </div>
             </section>
                
-             <img class="presentacionImagenes" src="./assets/andres en el rio.jpg" alt= "foto perfil de andres en la orilla del rio">
+             <img class="presentacionImagenes" src="./assets/andres-en-el-rio.jpg" alt= "foto perfil de andres en la orilla del rio">
 
             </main>
 
