--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 <body class="segundaPagina">
     <header class="header">
         <nav class="header_menu">
-            <a class="header_menu_link" href="pagina.html">Home</a>
+            <a class="header_menu_link" href="index.html">Home</a>
             <a class="header_menu_link" href="about.html">Sobre mí</a>
 
         </nav>
@@ -37,7 +37,7 @@
             </p>
 
         </section>
-        <img  src="./assets/andres en el rio.jpg" alt= "foto perfil de andres en la orilla del rio" class="foto">
+        <img  src="./assets/andres-en-el-rio.jpg" alt= "foto perfil de andres en la orilla del rio" class="foto">
     </main>
 
     <footer class="footer">
