--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
         <header class="header">
             <nav class="header_menu">
-                <a class="header_menu_link" href="pagina.html">Home</a>
+                <a class="header_menu_link" href="index.html">Home</a>
                 <a class="header_menu_link" href="about.html">Sobre mí</a>
 
             </nav>
