Actualiza la pagina

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Sistema de registros de juegos</title>
 </head>
 <body>
-    
+    <h1>
+        <p>
+            Instructor
+        </p>
+    </h1>
 </body>
 </html>
